<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/curious_fox"
        android:scaleType="centerCrop"
        android:src="@drawable/fox" />

    <TextView
        android:id="@+id/about"
        style="@style/artist"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/menuButton"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="71dp"
        android:background="@color/colorPrimaryDark"
        android:paddingBottom="16dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:text="@string/about"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/menuButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/to_main_menu"
        android:src="@drawable/menu_button" />

</RelativeLayout>